// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Star renders grey colored correctly 1`] = `
<svg
  class=""
  height="25"
  width="23"
>
  <polygon
    points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
    style="fill-rule: nonzero;"
  />
</svg>
`;

exports[`Star renders yellow colored correctly 1`] = `
<svg
  class="filled"
  height="25"
  width="23"
>
  <polygon
    points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
    style="fill-rule: nonzero;"
  />
</svg>
`;
